<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="main_text">My First Application</string>
    <string name="student_info">Student: Sobol\nGroup: 3.2ISiP2</string>
    <string name="avatar_description">The author\'s avatarа</string>
    <string name="menu_description">Menu</string>
    <string name="like_description">Like</string>
    <string name="share_description">To share</string>
    <string name="views_description">Views</string>
    <string name="edit_post">Edit</string>
    <string name="remove_post">Delete</string>
    <string name="post_hint">What’s new with you?</string>
    <string name="save_post">To publish</string>
    <string name="cancel_edit_hint">Editing...</string>
    <string name="cancel_edit">Cancel</string>
    <string name="add_post">Add post</string>
    <string name="edit_post_title">New post</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_post_edit_title">edit post edit title</string>
    <string name="error_empty_content">Text cannot be empty</string>
    <string name="play_video">play_video</string>
    <string name="open_external">Open in external app</string>
    <string name="error_no_video_app">No video app found</string>
    <string name="error_cannot_open_video">НUnable to open video</string>
    <string name="share_post_via">Share via</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="post_removed">Post removed</string>


</resources>